# wheeled_robots_intro

./: GIT.md  README.md
hw_1/: README.md
hw_2/: README.md  mujoco_diff_drive.ipynb
hw_3/: README.md
hw_3/sdc/: kalman_filter.py
hw_4/: README.md  take_photos.py
hw_5/: README.md
hw_6/: CMakeLists.txt  README.md  docker-compose.nvidia.yml  docker-compose.yml  package.xml
hw_6/include/bachelor/: example.hpp
hw_6/launch/: start.launch
hw_6/scripts/: example.py
hw_6/src/: example.cpp
lec_5_ros/: Dockerfile  README.md  build_docker.sh  exec_docker.sh  install_docker.sh  run_docker.sh
lec_5_ros/catkin_ws/devel/lib/pkgconfig/: chatter.pc  listener.pc  talker.pc
lec_5_ros/catkin_ws/devel/share/chatter/cmake/: chatterConfig.cmake
lec_5_ros/catkin_ws/devel/share/listener/cmake/: listenerConfig.cmake
lec_5_ros/catkin_ws/devel/share/talker/cmake/: talkerConfig.cmake
lec_5_ros/catkin_ws/src/chatter/: CMakeLists.txt
lec_5_ros/catkin_ws/src/chatter/launch/: chatter.launch
lec_5_ros/catkin_ws/src/listener/: CMakeLists.txt
lec_5_ros/catkin_ws/src/talker/: CMakeLists.txt
test_assignment/: README.md
